refactor: rename entity directories from 'entitys' to 'entities' for consistency
feat: add Website entity with various properties for web scraping configuration

feat: implement reading progress tracking for users with ReadingProgress entity

feat: create Role entity for user roles management

fix: update routes and component names for default outlet

fix: correct spelling in various components and templates

--- a/front/src/app/components/book-filter/book-filter.component.html
+++ b/front/src/app/components/book-filter/book-filter.component.html
@@ -28,7 +28,7 @@
 			rightIcon="shuffle"
 			(click)="openRandomFiltersModal()"
 		>
-			Filtros aleatorios
+			Filtros aleatórios
 		</app-button>
 		<app-button
 			rounded="small"
@@ -36,7 +36,7 @@
 			rightIcon="dices"
 			(click)="goToRandomBook()"
 		>
-			Livro aleatorio
+			Livro aleatório
 		</app-button>
 	</div>
 	<div class="actions-group">
