--- a/front/src/app/pages/book/book.component.html
+++ b/front/src/app/pages/book/book.component.html
@@ -33,7 +33,7 @@
 				</h6>
 			</div>
 			<div class="bottom">
-				<div class="caps">{{ book.totalChapters }} Capitulos</div>
+				<div class="caps">{{ book.totalChapters }} Capítulos</div>
 				<div class="release">Lançamento {{ book.publication }}</div>
 				<div class="actions">
 					<app-button
