--- a/front/src/app/components/notification/custom-components/cover-edit-modal/cover-edit-modal.component.scss
+++ b/front/src/app/components/notification/custom-components/cover-edit-modal/cover-edit-modal.component.scss
@@ -58,7 +58,7 @@
 	.upload-overlay {
 		position: absolute;
 		inset: 0;
-		background: rgba(0, 0, 0, 0.6);
+		background: rgba(var(--shadow-base), 0.6);
 		display: flex;
 		flex-direction: column;
 		align-items: center;
