--- a/front/public/assets/scss/_color.scss
+++ b/front/public/assets/scss/_color.scss
@@ -25,13 +25,32 @@
 	--yellow: #ffc107;
 	--light-yellow: #fff3cd;
 	--dark-yellow: #856404;
-	
+
 	--cyan: #17a2b8;
-	
+
 	--success: #28a745;
 	--success-hover: #218838;
-	
+
 	--danger: #dc3545;
 	--light-red: #ff4d4f;
 	--soft-red: #ff6b6b;
+
+	// Badge Colors
+	--badge-blue: #2b7fff;
+	--badge-blue-light: #bedbff;
+	--badge-green: #2ecc71;
+	--badge-green-light: #a0eebb;
+	--badge-orange: #f18522;
+	--badge-orange-light: #ffcc99;
+	--badge-red: #ff4343;
+	--badge-red-light: #ffcccc;
+	--badge-purple: #9b59b6;
+	--badge-purple-light: #d2b4de;
+	--badge-yellow: #f1c40f;
+	--badge-yellow-light: #f9e79f;
+	--badge-turquoise: #1abc9c;
+	--badge-turquoise-light: #a3e4d7;
+
+	// Overlay & Shadow
+	--shadow-base: 0, 0, 0;
 }
