--- a/front/src/app/components/inputs/button/button.component.scss
+++ b/front/src/app/components/inputs/button/button.component.scss
@@ -98,7 +98,11 @@ button {
 		font-size: 1rem;
 
 		&:hover:not(:disabled) {
-			background-color: rgba(0, 0, 0, 0.05);
+			background-color: color-mix(
+				in srgb,
+				var(--app-text-color) 5%,
+				transparent
+			);
 		}
 	}
 }
