--- a/front/src/app/components/header/header.component.scss
+++ b/front/src/app/components/header/header.component.scss
@@ -6,13 +6,29 @@
 
 header {
 	width: 100%;
-	height: 80px;
+	height: 60px;
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
 	padding: 0 40px;
 	border-bottom: 2px solid var(--app-text-color);
 	background-image: var(--degrader);
+
+	.menu-btn {
+		background: none;
+		border: none;
+		cursor: pointer;
+		color: var(--app-text-color);
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		padding: 5px;
+		transition: opacity 0.2s;
+
+		&:hover {
+			opacity: 0.7;
+		}
+	}
 
 	#logo {
 		display: flex;
