--- a/front/src/app/pages/book/book.component.scss
+++ b/front/src/app/pages/book/book.component.scss
@@ -256,6 +256,7 @@ $page-size: 1200px;
 				font-size: 1rem;
 				color: var(--app-text-color);
 				text-transform: capitalize;
+				cursor: pointer;
 			}
 			.tag {
 				background-color: var(--primary-color);
@@ -295,7 +296,6 @@ $page-size: 1200px;
 			font-size: 1rem;
 			line-height: 1.5;
 			text-align: center;
-			white-space: pre-wrap;
 
 			&.placeholder {
 				height: 6rem;
