--- a/front/src/app/components/info-book/info-book.component.html
+++ b/front/src/app/components/info-book/info-book.component.html
@@ -1,7 +1,7 @@
 <div id="header">
 	<div class="selector" #selector></div>
 	<span #firstTab (click)="selectTab(tab.chapters, $event)">Capítulos</span>
-	<span (click)="selectTab(tab.covers, $event)">Capas</span>
+	<span (click)="selectTab(tab.covers, $event)">Artes</span>
 	<span (click)="selectTab(tab.extraInfo, $event)">Informações extras</span>
 	<span (click)="selectTab(tab.savedPages, $event)">Páginas Salvas</span>
 </div>
