--- a/front/src/app/components/item-book/item-book.component.html
+++ b/front/src/app/components/item-book/item-book.component.html
@@ -1,30 +1,23 @@
-@if(type == 'grid'){
-<a [routerLink]="[book.id]" class="book-card grid" (contextmenu)="onContextMenu($event)">
+<a
+	[routerLink]="[book.id]"
+	[class]="'book-card ' + type"
+	(contextmenu)="onContextMenu($event)"
+>
 	@if (book.cover && !imageError) {
-	<img [src]="book.cover" alt="" (error)="onImageError()" />
+		<img [src]="book.cover" alt="" (error)="onImageError()" />
 	} @else {
-	<div class="cover-placeholder">
-		<app-icons name="image" />
-	</div>
-	}
-	<div class="info">
-		<span>{{ book.title }}</span>
-	</div>
-</a>
-} @else {
-<a [routerLink]="[book.id]" class="book-card list" (contextmenu)="onContextMenu($event)">
-	@if (book.cover && !imageError) {
-	<img [src]="book.cover" alt="" (error)="onImageError()" />
-	} @else {
-	<div class="cover-placeholder">
-		<app-icons name="image" />
-	</div>
-	}
-	<div class="info">
-		<div>
-			<span class="title">{{ book.title }}</span>
+		<div class="cover-placeholder">
+			<app-icons name="image" />
 		</div>
-		<span class="description">{{ book.description }}</span>
-	</div>
+	}
+	@if (type === 'list') {
+		<div class="info">
+			<span class="title">{{ book.title }}</span>
+			<span class="description">{{ book.description }}</span>
+		</div>
+	} @else {
+		<div class="info">
+			<span>{{ book.title }}</span>
+		</div>
+	}
 </a>
-}
