--- a/front/src/app/pages/outlet/default-outlet/side-nav/side-nav.component.scss
+++ b/front/src/app/pages/outlet/default-outlet/side-nav/side-nav.component.scss
@@ -54,6 +54,13 @@
 			margin: 0;
 			line-height: 1;
 		}
+
+		#logo {
+			transition: transform 0.3s;
+			&.dark-theme {
+				transform: translateY(-4px);
+			}
+		}
 	}
 }
 
