--- a/front/src/app/pages/outlet/default-outlet/side-nav/side-nav.component.scss
+++ b/front/src/app/pages/outlet/default-outlet/side-nav/side-nav.component.scss
@@ -92,7 +92,6 @@
 	padding: 10px 20px;
 	color: var(--app-text-color);
 	transition: background-color 0.2s;
-	border-radius: 8px;
 
 	&:hover {
 		background-color: color-mix(
@@ -105,7 +104,7 @@
 	.label {
 		font-family: 'Inknut Antiqua', serif;
 		font-weight: 500;
-		font-size: 1.4rem;
+		font-size: 1.2em;
 		line-height: 1;
 		white-space: nowrap;
 	}
